--- a/new_web/new_web/templates/base.html
+++ b/new_web/new_web/templates/base.html
@@ -29,7 +29,7 @@
 
         <!-- Template Stylesheet -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
-        <link href="{% static 'css/contactform.css' %}" rel="stylesheet">
+        <!--<link href="{% static 'css/contactform.css' %}" rel="stylesheet">-->
 
         {% load bootstrap5 %}
 
@@ -45,7 +45,9 @@
     
         {% include 'header.html' %}
 
-        {% block content %}{% endblock %}
+        {% block content %}
+        
+        {% endblock %}
 
         {% include 'footer.html' %}
 
