--- a/new_web/new_web/templates/header.html
+++ b/new_web/new_web/templates/header.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-6  mt-2 mb-2 text-end">                    
                     <a href="tel:+56232108280" style="text-decoration: none; color: #00285d; background-color: white;">
-                        <strong>{% bs_icon 'phone' color='#00285d' %} +56 2 3210 8280 </strong>
+                        <strong>{% bs_icon 'phone-vibrate' color='#00285d' %} +56 2 3210 8280</strong>
                     </a>
                 </div>
             
