--- a/new_web/new_web/templates/header.html
+++ b/new_web/new_web/templates/header.html
@@ -62,17 +62,17 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
-                    <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
-                    <a href="{% url 'courses' %}" class="nav-item nav-link">Courses</a>
+                    <a href="{% url 'about' %}" class="nav-item nav-link">Nosotros</a>
+                    <a href="{% url 'courses' %}" class="nav-item nav-link">Cursos</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu fade-down m-0">
-                            <a href="{% url 'team' %}" class="dropdown-item">Our Team</a>
-                            <a href="{% url 'testimonial' %}" class="dropdown-item">Testimonial</a>
+                            <a href="{% url 'team' %}" class="dropdown-item">Nuestro Equipo</a>
+                            <a href="{% url 'testimonial' %}" class="dropdown-item">Testimonios</a>
                             <a href="{% url 'error404' %}" class="dropdown-item">404 Page</a>
                         </div>
                     </div>
-                    <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
+                    <a href="{% url 'contact' %}" class="nav-item nav-link">Contacto</a>
                 </div>
                <!-- <a target="_blank" href="https://diagnostico.norteamericano.cl" class="btn btn-success py-4 px-lg-5 d-none d-lg-block">Evaluate ahora<i class="fa fa-arrow-right ms-3"></i></a> -->
             </div>
